<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.example</groupId>
  <artifactId>ae</artifactId>
  <version>1.0.0</version>

  <properties>
    <maven.compiler.source>17</maven.compiler.source>
    <maven.compiler.target>17</maven.compiler.target>
    <jmetal.version>6.9.3</jmetal.version>
  </properties>

  <dependencies>
    <dependency>
      <groupId>org.uma.jmetal</groupId>
      <artifactId>jmetal-core</artifactId>
      <version>${jmetal.version}</version>
    </dependency>
    <dependency>
      <groupId>org.uma.jmetal</groupId>
      <artifactId>jmetal-algorithm</artifactId>
      <version>${jmetal.version}</version>
    </dependency>
  </dependencies>

</project>
